k8sconfigs/templates-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: templates-microservice-${ENV_NAME}
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: templates-microservice-${ENV_NAME}
  template:
    metadata:
      labels:
        app: templates-microservice-${ENV_NAME}
    spec:
      containers:
        - name: templates-microservice-${ENV_NAME}
          image: habibullinilya/{IMAGE_NAME}:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8080
          readinessProbe: 
            httpGet: 
              path: /template/info/1
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 3
            timeoutSeconds: 5
            successThreshold: 5
