k8sconfigs/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: templates_database
  labels:
    app: templates_database
spec:
  type: LoadBalancer
  ports:
   - port: 5432
  selector:
   app: templates_database
