k8sconfigs/templates-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: templates_microservice
  labels:
    app: templates_microservice
spec:
  type: NodePort
  ports:
   - port: 8080
     nodePort: 30081
  selector:
   app: templates_microservice
