k8sconfigs/templates-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: templates-microservice-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "microservice-static-ip"
spec:
  backend:
    serviceName: templates-microservice
    servicePort: 8080
